--- a/services.css
+++ b/services.css
@@ -5,14 +5,16 @@
 @import url("./css/blocks/logo.css");
 @import url("./css/blocks/menu.css");
 @import url("./css/blocks/contacts.css");
-@import url("./css/blocks/promo.css");
+@import url("./css/blocks/top.css");
+@import url("./css/blocks/breadcrumbs.css");
+@import url("./css/blocks/service.css");
 @import url("./css/blocks/button.css");
-@import url("./css/blocks/offer.css");
-@import url("./css/blocks/news.css");
 @import url("./css/blocks/paginator.css");
-@import url("./css/blocks/about.css");
+@import url("./css/blocks/partners.css");
 @import url("./css/blocks/footer.css");
 @import url("./css/blocks/socials.css");
+
+
 
 
 .container {
@@ -20,8 +22,10 @@
   width: 1142px;
 }
 
-.main-wrapper {
-  background: url("image/hero.png") center top 6px no-repeat, url("image/bottom-pic.png") center bottom 308px no-repeat, #17191C;
-  background-size: 115%;
+.main-content {
+  background: #F4F5F5;
 }
 
+.section--footer {
+  background: #17191C;
+}
