--- a/css/blocks/top.css
+++ b/css/blocks/top.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 27.5px;
-  background: url("/image/top-line.png") right 50% top no-repeat;
+  background: url("image/top-line.png") right 50% top no-repeat;
 }
 
 .top__title {
