--- a/css/blocks/socials.css
+++ b/css/blocks/socials.css
@@ -20,33 +20,33 @@ justify-content: space-between;
 }
 
 .socials__item--icon--tg .socials__link {
-  background-image: url("image/telegram.png");
+  background-image: url("../../image/telegram.png");
 }
 
 .socials__item--icon--vk .socials__link {
-  background-image: url("image/vk.png");
+  background-image: url("../../image/vk.png");
 }
 
 .socials__item--icon--fb .socials__link {
-  background-image: url("image/f.png");
+  background-image: url("../../image/f.png");
 }
 
 .socials__item--icon--inst .socials__link {
-  background-image: url("image/in.png");
+  background-image: url("../../image/in.png");
 }
 
 .socials__item--icon--tg .socials__link:hover {
-  background-image: url("image/telegram-hover.png");
+  background-image: url("../../image/telegram-hover.png");
 }
 
 .socials__item--icon--vk .socials__link:hover {
-  background-image: url("image/vk-hover.png");
+  background-image: url("../../image/vk-hover.png");
 }
 
 .socials__item--icon--fb .socials__link:hover {
-  background-image: url("image/f-hover.png");
+  background-image: url("../../image/f-hover.png");
 }
 
 .socials__item--icon--inst .socials__link:hover {
-  background-image: url("image/in-hover.png");
+  background-image: url("../../image/in-hover.png");
 }
